--- a/square tracking/index.html
+++ b/square tracking/index.html
@@ -8,6 +8,8 @@
     <title>Vierge</title>
   </head>
   <body>
+     <!-- curseur -->
+     <div id="ball"></div>
     <script src="assets/script/app.js"></script>
   </body>
  
