--- a/todolist2/index.html
+++ b/todolist2/index.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vierge</title>
+    <title>To do List</title>
   </head>
   <body>
+    <section>
+      <h1>To Do List</h1>
+      <div class="container">
+        <div class="full_input">
+          <input type="text" placeholder='Add a task...' id = "inputField">
+          <button id="addToDo">+</button>
+      </div>
+      <div id="toDoContainer"></div>
+    </section>
     <script src="assets/script/app.js"></script>
   </body>
  
